Fixed a layout issue of photosafetynet prompt on mobile

--- a/src/styles/today.css
+++ b/src/styles/today.css
@@ -592,4 +592,17 @@
         width: calc(100% - 70px);
         padding: 100px 35px;
     }
+
+    .today-guide-photosafetynet.opened {
+        padding: 20px 35px;
+    }
+
+    .today-guide-photosafetynet.opened .guide-text {
+        font-size: 0.95em;
+        width: auto;
+    }
+
+    .today-guide-photosafetynet.opened .guide-photosafetynet-actions {
+        text-align: center;
+    }
 }
